--- a/database.yml
+++ b/database.yml
@@ -1,8 +1,8 @@
 development:
   dialect: postgres
   database: pizza_development
-  user: postgres
-  password: postgres
+  user: pizzayolo
+  password: 
   host: 127.0.0.1
   pool: 5
 
